--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     </style>
 </head>
 <body class="antialiased">
-
     <!-- 固定导航栏 -->
     <nav class="fixed top-0 left-0 right-0 bg-black/90 backdrop-blur-md z-50 border-b border-gray-800">
         <div class="max-w-6xl mx-auto px-6 py-4">
@@ -39,7 +38,6 @@
             </div>
         </div>
     </nav>
-
     <section class="min-h-screen flex flex-col items-center justify-center text-center px-4 bg-gradient-to-b from-[#000] to-[#1a1a1a] pt-20">
         <div class="mb-8">
             <img src="封面.png" alt="李硕" class="w-48 h-48 rounded-full object-cover border-4 border-white shadow-lg">
@@ -63,15 +61,22 @@
             <span>20年经验</span>
         </div>
     </section>
-
     <section id="ai-insights" class="py-24 px-6 max-w-6xl mx-auto">
         <h3 class="text-4xl font-bold mb-16 text-center">AI 时代洞察与能力展示</h3>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+            <!-- 原全网首发-AI时代企业组织结构图 -->
             <div class="glass-card p-8 rounded-3xl transition-transform hover:scale-105">
                 <span class="text-blue-400 text-sm font-bold uppercase">全网首发 </span>
                 <h4 class="text-2xl font-bold mt-2">全网首发- AI时代企业组织结构图</h4>
                 <a href="https://v.douyin.com/G1LSAkZXdm8/" class="mt-4 text-blue-400 hover:underline block" target="_blank">查看详情</a>
             </div>
+            <!-- 调整后：全网首发-企业数字员工盘点（移至右侧，统一蓝色标签） -->
+            <div class="glass-card p-8 rounded-3xl transition-transform hover:scale-105">
+                <span class="text-blue-400 text-sm font-bold uppercase">全网首发 </span>
+                <h4 class="text-2xl font-bold mt-2">全网首发-企业数字员工盘点</h4>
+                <a href="https://visigegemini4.github.io/newpages-1/" class="mt-4 text-blue-400 hover:underline block" target="_blank">查看详情</a>
+            </div>
+            <!-- 原有其他卡片依次后移 -->
             <div class="glass-card p-8 rounded-3xl transition-transform hover:scale-105">
                 <span class="text-purple-400 text-sm font-bold uppercase">数字员工 </span>
                 <h4 class="text-2xl font-bold mt-2">2026年我入职了4位数字员工 </h4>
@@ -99,7 +104,6 @@
             </div>
         </div>
     </section>
-
     <section id="hr-capabilities" class="bg-[#f5f5f7] text-black py-24 px-6">
         <div class="max-w-6xl mx-auto">
             <h3 class="text-4xl font-bold mb-16 text-center text-black">人力资源"全栈"实力</h3>
@@ -266,7 +270,6 @@
             </div>
         </div>
     </section>
-
     <section id="career-journey" class="py-24 px-6 max-w-4xl mx-auto">
         <h3 class="text-4xl font-bold mb-16 text-center text-white">职业足迹</h3>
         <div class="space-y-4">
@@ -420,7 +423,6 @@
             }
         }
     </script>
-
     <footer class="py-24 bg-[#1c1c1e] text-center px-6">
         <h3 class="text-3xl font-bold mb-8 apple-gradient typing-animation">准备好迎接 AI 组织变革了吗？</h3>
         <div class="flex flex-col space-y-4 items-center">
@@ -439,6 +441,5 @@
             <a href="mailto:visigegemini4@gmail.com" class="mt-8 bg-white text-black px-10 py-4 rounded-full font-bold hover:bg-gray-200 transition">立即联系</a>
         </div>
     </footer>
-
 </body>
 </html>
